Attempt #47298347 try z-index for same issue

--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -59,6 +59,7 @@
     height: 300px;
     width: 225px;
     outline: none;
+    z-index: 3;
 }
 
 .slide-holder:focus {
